fixbug github action 安裝 pnpm 時顯示 Error: No pnpm version is specified.

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -21,6 +21,7 @@ jobs:
             - name: 安裝 pnpm
               uses: pnpm/action-setup@v2
               with:
+                  version: 8.6.2
                   run_install: true
 
 
