fixbug github action 部屬文檔時出錯
Error: The deploy step encountered an error: The process '/usr/bin/git' failed with exit code 128

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -43,5 +43,5 @@ jobs:
               uses: JamesIves/github-pages-deploy-action@v4
               with:
                   # 這是文檔部署到的分支名稱
-                  branch: gh-pages
+                  branch: main
                   folder: src/.vuepress/dist
