fixbug github action 部屬文檔時出錯 嘗試指定部屬 repo
fatal: unable to access 'https://github.com/lazypisces/StockSheetWeb.git/': The requested URL returned error: 403

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -48,6 +48,7 @@ jobs:
               with:
                   # 部署到 gh-pages 分支
                   target_branch: main
+                  repo: StockSheet
                   # 部署目錄為 VuePress 的默認輸出目錄
                   build_dir: src/.vuepress/dist
               env:
