fixbug github action 部屬文檔時出錯 嘗試增加寫入權限

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -9,6 +9,10 @@ on:
     # 手動觸發部署
     workflow_dispatch:
 
+# 增加寫入權限
+permissions:
+    contents: write
+
 jobs:
     deploy-gh-pages:
         runs-on: ubuntu-latest
