--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "docs:build": "vuepress build src",
     "docs:clean-dev": "vuepress dev src --clean-cache",
     "dev": "pnpm run docs:dev",
-    "docs:dev": "vuepress dev src",
+    "docs:dev": "vuepress dev src --port 8090",
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
