--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "pnpm run docs:build",
     "docs:build": "vuepress build src",
-    "docs:clean-dev": "vuepress dev src --clean-cache",
+    "docs:clean-dev": "vuepress dev src --clean-cache --port 8090",
     "dev": "pnpm run docs:dev",
     "docs:dev": "vuepress dev src --port 8090",
     "docs:update-package": "pnpm dlx vp-update"
