--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -52,7 +52,7 @@ jobs:
               with:
                   # 部署到 gh-pages 分支
                   target_branch: main
-                  repo: lazypisces/StockSheet
+                  repo: 94lanyu/StockSheet
                   # 部署目錄為 VuePress 的默認輸出目錄
                   build_dir: src/.vuepress/dist
               env:
